--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.25.4",
     "next": "15.4.1",
     "pdfjs-dist": "^5.3.93",
     "react": "19.1.0",
