--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "pdfjs-dist": "^5.3.93",
     "react": "19.1.0",
